--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,10 +4,17 @@ version = "0.1.0"
 description = ""
 authors = ["Flávio Codeço Coelho <fccoelho@gmail.com>"]
 readme = "README.md"
+packages = [
+    { include = "libbygui", from = "." }
+]
+
+[tool.poetry.scripts]
+libbygui = "libbygui.main:run"
 
 [tool.poetry.dependencies]
 python = "^3.11"
 flet = "^0.22.0"
+libby = {git = "https://github.com/Deeplearn-PeD/libby"}
 
 
 [build-system]
