--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ python = "^3.11"
 flet = "^0.22.0"
 libby = {git = "https://github.com/Deeplearn-PeD/libby"}
 sqlmodel = "^0.0.16"
+python-dotenv = "^1.0.1"
 
 
 [build-system]
