Added page for article upload

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,12 +12,15 @@ packages = [
 libbygui = "libbygui.main:run"
 
 [tool.poetry.dependencies]
-python = "^3.11"
+python = ">=3.12,<3.13"
 flet = "^0.25.2"
 libby = {git = "https://github.com/Deeplearn-PeD/libby"}
 sqlmodel = "^0.0.18"
 python-dotenv = "^1.0.1"
 
+
+[tool.poetry.group.dev.dependencies]
+aider-chat = "^0.69.0"
 
 [build-system]
 requires = ["poetry-core"]
