--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "aiwrite"
-version = "0.3.2"
+version = "0.3.3"
 description = ""
 authors = ["Flávio Codeço Coelho <fccoelho@gmail.com>"]
 readme = "README.md"
@@ -18,6 +18,7 @@ libby = {git = "https://github.com/Deeplearn-PeD/libby", branch = "main"}
 sqlmodel = ">=0.0.18"
 python-dotenv = "^1.0.1"
 gradio = "^5.38.2"
+loguru = "^0.7.3"
 
 
 
