--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 name = "aiwrite"
 version = "0.3.5"
-description = ""
+description = "AI Writing Assistant"
 authors = [{ name = "Flávio Codeço Coelho", email = "fccoelho@gmail.com" }]
 requires-python = ">=3.12,<3.14"
 readme = "README.md"
@@ -19,7 +19,7 @@ dependencies = [
 aiwrite = "aiwrite.main:run"
 
 [tool.uv]
-package=true
+package = true
 
 [tool.uv.sources]
 libby = { git = "https://github.com/Deeplearn-PeD/libby", branch = "main" }
